--- a/index.html
+++ b/index.html
@@ -1,111 +1,109 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Creative Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Amal Kumar Tudu | Creative Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color: #0e0e0e;
-      color: #fff;
+      background: #f5f5f5;
+      color: #333;
     }
     header {
       background: #1f1f1f;
+      color: #fff;
       padding: 20px;
       text-align: center;
     }
     header h1 {
       margin: 0;
       font-size: 2.5em;
-      color: #facc15;
     }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 10px;
-    }
-    nav a {
-      text-decoration: none;
-      color: #ccc;
-      transition: color 0.3s;
-    }
-    nav a:hover {
-      color: #facc15;
-    }
-    .section {
+    section {
       padding: 40px 20px;
-      max-width: 1000px;
+      max-width: 900px;
       margin: auto;
     }
-    .section h2 {
-      color: #facc15;
-      border-bottom: 1px solid #444;
-      padding-bottom: 10px;
+    .section-title {
+      font-size: 1.8em;
+      border-bottom: 2px solid #000;
+      display: inline-block;
       margin-bottom: 20px;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-    .gallery img {
-      width: 100%;
-      border-radius: 12px;
     }
     .videos iframe {
       width: 100%;
       height: 250px;
-      border-radius: 12px;
+      margin-bottom: 20px;
+      border: none;
+    }
+    .gallery img {
+      width: 100%;
+      max-width: 250px;
+      margin: 10px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
+    .social-links a {
+      margin-right: 10px;
+      text-decoration: none;
+      color: #1f1f1f;
+      font-weight: bold;
     }
     footer {
       text-align: center;
       padding: 20px;
       background: #1f1f1f;
-      color: #888;
+      color: #fff;
+    }
+    .gallery, .videos {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>My Creative Work</h1>
-    <nav>
-      <a href="#videos">Videos</a>
-      <a href="#photos">Photos</a>
-      <a href="#about">About</a>
-    </nav>
+    <h1>Amal Kumar Tudu</h1>
+    <p>Editor | Videographer | Photographer</p>
   </header>
 
-  <section id="videos" class="section">
-    <h2>Videography & Edits</h2>
-    <div class="gallery videos">
+  <section>
+    <div class="section-title">Featured Videos</div>
+    <div class="videos">
       <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID1" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID2" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID3" allowfullscreen></iframe>
     </div>
   </section>
 
-  <section id="photos" class="section">
-    <h2>Photography</h2>
+  <section>
+    <div class="section-title">Photo Gallery</div>
     <div class="gallery">
-      <img src="https://via.placeholder.com/300x200.png?text=Photo+1" alt="Photo 1">
-      <img src="https://via.placeholder.com/300x200.png?text=Photo+2" alt="Photo 2">
-      <img src="https://via.placeholder.com/300x200.png?text=Photo+3" alt="Photo 3">
+      <img src="https://via.placeholder.com/250x150.png?text=Sample+Photo+1" alt="Sample Photo 1">
+      <img src="https://via.placeholder.com/250x150.png?text=Sample+Photo+2" alt="Sample Photo 2">
+      <img src="https://via.placeholder.com/250x150.png?text=Sample+Photo+3" alt="Sample Photo 3">
     </div>
   </section>
 
-  <section id="about" class="section">
-    <h2>About Me</h2>
-    <p>
-      I’m a passionate editor, videographer, and photographer who loves storytelling through visuals. Whether it's a cinematic edit or a powerful photo frame, I believe every piece should speak on its own.
-    </p>
+  <section>
+    <div class="section-title">Follow Me</div>
+    <div class="social-links">
+      <a href="https://www.instagram.com/amal_kumar_tudu?igsh=bnlrenplOGU0b3p2" target="_blank">Instagram</a>
+      <a href="https://www.facebook.com/share/1Cmgj51GQD/" target="_blank">Facebook</a>
+      <a href="https://youtube.com/@amalkrofficial?si=jgo9d1iisJ7IN7kC" target="_blank">YouTube</a>
+    </div>
   </section>
 
   <footer>
-    &copy; 2025 My Creative Portfolio | All rights reserved
+    © 2025 Amal Kumar Tudu. All rights reserved.
   </footer>
 </body>
 </html>
