--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </section>
 
   <footer>
-    &copy; 2025 My Creative Portfolio | All rights reserved
+    &copy; 2025 Amal Kumar Tudu | All rights reserved
   </footer>
 </body>
 </html>
