--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
   <header>
-    <h1>My Creative Work</h1>
+    <h1>Amal Kumar Tudu</h1>
     <nav>
       <a href="#videos">Videos</a>
       <a href="#photos">Photos</a>
@@ -82,9 +82,9 @@
   <section id="videos" class="section">
     <h2>Videography & Edits</h2>
     <div class="gallery videos">
-      <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID1" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID2" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID3" allowfullscreen></iframe>
+      <iframe src="https://youtu.be/uvEJF3KB3kc?si=fGW7PgQ-SJtI7AA-" allowfullscreen></iframe>
+      <iframe src="https://youtu.be/HKWHfG7cXs0?si=PpRZt-flEG0MM5dg" allowfullscreen></iframe>
+      <iframe src="https://youtu.be/_YL4wjaXk28?si=8cEQXfT1iMIROKa9" allowfullscreen></iframe>
     </div>
   </section>
 
@@ -102,7 +102,9 @@
     <p>
       I’m a passionate editor, videographer, and photographer who loves storytelling through visuals. Whether it's a cinematic edit or a powerful photo frame, I believe every piece should speak on its own.
     </p>
-  </section>
+  </section> 
+  
+  
 
   <footer>
     &copy; 2025 Amal Kumar Tudu | All rights reserved
