--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="gallery videos">
       <iframe src="https://youtu.be/uvEJF3KB3kc?si=fGW7PgQ-SJtI7AA-" allowfullscreen></iframe>
       <iframe src="https://youtu.be/HKWHfG7cXs0?si=PpRZt-flEG0MM5dg" allowfullscreen></iframe>
-      <iframe src="https://youtu.be/_YL4wjaXk28?si=8cEQXfT1iMIROKa9" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/watch?v=_YL4wjaXk28&ab_channel=SHINECINEPRODUCTION" allowfullscreen></iframe>
     </div>
   </section>
 
