--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <section id="videos" class="section">
     <h2>Videography & Edits</h2>
     <div class="gallery videos">
-      <iframe src="https://youtu.be/uvEJF3KB3kc?si=fGW7PgQ-SJtI7AA-" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/XAa-KvBHbYo" allowfullscreen></iframe>
       <iframe src="https://youtu.be/HKWHfG7cXs0?si=PpRZt-flEG0MM5dg" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/_YL4wjaXk28" allowfullscreen></iframe>
     </div>
