--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <h2>Videography & Edits</h2>
     <div class="gallery videos">
       <iframe src="https://www.youtube.com/embed/XAa-KvBHbYo" allowfullscreen></iframe>
-      <iframe src="https://youtu.be/HKWHfG7cXs0?si=PpRZt-flEG0MM5dg" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/cS6VxqUwZJk" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/_YL4wjaXk28" allowfullscreen></iframe>
     </div>
   </section>
