--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
   
 
   <footer>
+    <footer id="contact">
+    <div class="social-icons">
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-youtube"></i></a>
+      <a href="#"><i class="fab fa-whatsapp"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
     &copy; 2025 Amal Kumar Tudu | All rights reserved
   </footer>
 </body>
