--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       <a href="#"><i class="fab fa-youtube"></i></a>
       <a href="#"><i class="fab fa-whatsapp"></i></a>
       <a href="#"><i class="fab fa-facebook"></i></a>
+    </div>
     &copy; 2025 Amal Kumar Tudu | All rights reserved
   </footer>
 </body>
