--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
       <a href="#"><i class="fab fa-whatsapp"></i></a>
       <a href="#"><i class="fab fa-facebook"></i></a>
     </div>
+    <div class="copyright">
     &copy; 2025 Amal Kumar Tudu | All rights reserved
   </footer>
 </body>
