--- a/index.html
+++ b/index.html
@@ -201,16 +201,37 @@
   </section>
 
   <footer id="contact">
-    <div class="social-icons">
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
-      <a href="#"><i class="fab fa-whatsapp"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
-    </div>
-    <div class="copyright">
-      &copy; 2025 Amal Kumar Tudu | All rights reserved
-    </div>
-  </footer>
+  <style>
+    .social-icons a {
+      color: #ccc;
+      margin: 0 10px;
+      font-size: 1.6em;
+      text-decoration: none;
+      display: inline-block;
+      transition: color 0.3s;
+    }
 
-</body>
-</html>
+    .social-icons a:hover {
+      color: #facc15;
+    }
+  </style>
+
+  <div class="social-icons">
+    <a href="https://www.instagram.com/amal_kumar_tudu?igsh=bnlrenplOGU0b3p2" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://youtube.com/@amalkrofficial?si=k08JCgbjPkS2jjS_" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-youtube"></i>
+    </a>
+    <a href="https://www.facebook.com/share/16LQbjBuC8/" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-facebook"></i>
+    </a>
+    <a href="#" title="WhatsApp link not available">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+  </div>
+
+  <div class="copyright">
+    &copy; 2025 Amal Kumar Tudu | All rights reserved
+  </div>
+</footer>
