--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Amal Kumar Tudu</title>
+
+  <!-- ✅ Google Site Verification Tag -->
+  <meta name="google-site-verification" content="ApQjPo5AWPKIUjCWAgE6tMbqteDXV-2Xqamya6SLmvE" />
+  
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
