--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
   <section id="videos" class="section">
     <h2>Videography & Edits</h2>
     <div class="gallery videos">
+      <iframe src="https://www.youtube.com/embed/uvEJF3KB3kc" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/HKWHfG7cXs0" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/_YL4wjaXk28" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/cS6VxqUwZJk" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/XAa-KvBHbYo" allowfullscreen></iframe>
