--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
       <div class="skill-badge">Video Editing</div>
       <div class="skill-badge">Color Grading</div>
       <div class="skill-badge">Photography</div>
+      <div class="skill-badge">Videography</div>
       <div class="skill-badge">Motion Graphics</div>
       <div class="skill-badge">Sound Design</div>
     </div>
