--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <a href="https://www.facebook.com/share/16LQbjBuC8/" target="_blank" rel="noopener noreferrer">
       <i class="fab fa-facebook"></i>
     </a>
-    <a href="#" title="WhatsApp link not available">
+    <a href="https://wa.me/916296634176" target="_blank" rel="noopener noreferrer">
       <i class="fab fa-whatsapp"></i>
     </a>
   </div>
