--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Amal Kumar Tudu</title>
 
-  </style>
-    <!-- ✅ JSON-LD script for Google Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Amal Kumar Tudu",
-      "url": "https://amalkumartudu.netlify.app",
-      "image": "https://amalkumartudu.netlify.app/logo192.png",
-      "sameAs": [
-        "https://www.youtube.com/@amalkrofficial?si=k08JCgbjPkS2jjS_",
-        "https://instagram.com/amal_kumar_tudu",
-        "https://facebook.com/share/16LQbjBuC8/"
-      ]
-    }
-    </script>
-  </head>
-  
+  <!-- ✅ JSON-LD script for Google Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Amal Kumar Tudu",
+    "url": "https://amalkumartudu.netlify.app",
+    "image": "https://amalkumartudu.netlify.app/logo192.png",
+    "sameAs": [
+      "https://www.youtube.com/@amalkrofficial?si=k08JCgbjPkS2jjS_",
+      "https://instagram.com/amal_kumar_tudu",
+      "https://facebook.com/share/16LQbjBuC8/"
+    ]
+  }
+  </script>
+
   <!-- ✅ Google Site Verification Tag -->
   <meta name="google-site-verification" content="ApQjPo5AWPKIUjCWAgE6tMbqteDXV-2Xqamya6SLmvE" />
-  
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  
   <style>
     * {
       box-sizing: border-box;
