--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -17,6 +17,9 @@
       "https://www.youtube.com/@amalkrofficial?si=k08JCgbjPkS2jjS_",
       "https://instagram.com/amal_kumar_tudu",
       "https://facebook.com/share/16LQbjBuC8/"
+  ],
+  "jobTitle": "Video Editor",
+  "description": "Editor , DoP & Di working in music videos, passionate about storytelling through visuals."
     ]
   }
   </script>
@@ -155,7 +158,9 @@
     .social-icons a {
       color: #ccc;
       margin: 0 10px;
-      font-size: 1.5em;
+      font-size: 1.6em;
+      text-decoration: none;
+      display: inline-block;
       transition: color 0.3s;
     }
 
@@ -177,6 +182,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <header>
@@ -227,37 +233,25 @@
   </section>
 
   <footer id="contact">
-  <style>
-    .social-icons a {
-      color: #ccc;
-      margin: 0 10px;
-      font-size: 1.6em;
-      text-decoration: none;
-      display: inline-block;
-      transition: color 0.3s;
-    }
+    <div class="social-icons">
+      <a href="https://www.instagram.com/amal_kumar_tudu?igsh=bnlrenplOGU0b3p2" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://youtube.com/@amalkrofficial?si=k08JCgbjPkS2jjS_" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-youtube"></i>
+      </a>
+      <a href="https://www.facebook.com/share/16LQbjBuC8/" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a href="https://wa.me/916296634176" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+    </div>
 
-    .social-icons a:hover {
-      color: #facc15;
-    }
-  </style>
+    <div class="copyright">
+      &copy; 2025 Amal Kumar Tudu | All rights reserved
+    </div>
+  </footer>
 
-  <div class="social-icons">
-    <a href="https://www.instagram.com/amal_kumar_tudu?igsh=bnlrenplOGU0b3p2" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://youtube.com/@amalkrofficial?si=k08JCgbjPkS2jjS_" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-youtube"></i>
-    </a>
-    <a href="https://www.facebook.com/share/16LQbjBuC8/" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-facebook"></i>
-    </a>
-    <a href="https://wa.me/916296634176" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-whatsapp"></i>
-    </a>
-  </div>
-
-  <div class="copyright">
-    &copy; 2025 Amal Kumar Tudu | All rights reserved
-  </div>
-</footer>
+</body>
+</html>
