--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     "url": "https://amalkumartudu.netlify.app",
     "image": "https://amalkumartudu.netlify.app/logo192.png",
     "sameAs": [
-      "https://www.youtube.com/@amalkrofficial?si=k08JCgbjPkS2jjS_",
-      "https://instagram.com/amal_kumar_tudu",
-      "https://facebook.com/share/16LQbjBuC8/"
+      "https://youtube.com/@AMALKROfficial",
+      "https://www.instagram.com/amal_kumar_tudu",
+      "https://www.facebook.com/amal.tudu.12"
   ],
   "jobTitle": "Video Editor",
   "description": "Editor , DoP & Di working in music videos, passionate about storytelling through visuals."
@@ -234,13 +234,13 @@
 
   <footer id="contact">
     <div class="social-icons">
-      <a href="https://www.instagram.com/amal_kumar_tudu?igsh=bnlrenplOGU0b3p2" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.instagram.com/amal_kumar_tudu" target="_blank" rel="noopener noreferrer">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://youtube.com/@amalkrofficial?si=k08JCgbjPkS2jjS_" target="_blank" rel="noopener noreferrer">
+      <a href="https://youtube.com/@AMALKROfficial" target="_blank" rel="noopener noreferrer">
         <i class="fab fa-youtube"></i>
       </a>
-      <a href="https://www.facebook.com/share/16LQbjBuC8/" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.facebook.com/amal.tudu.12" target="_blank" rel="noopener noreferrer">
         <i class="fab fa-facebook"></i>
       </a>
       <a href="https://wa.me/916296634176" target="_blank" rel="noopener noreferrer">
