--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       "https://www.facebook.com/amal.tudu.12"
   ],
   "jobTitle": "Video Editor",
-  "description": "Editor, DoP & Di working in music videos, passionate about storytelling through visuals."
+  "description": "Editor, DoP & DI working in music videos, passionate about storytelling through visuals."
   }
   </script>
 
