--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </script>
 
   <!-- ✅ Google Site Verification Tag -->
-  <meta name="google-site-verification" content="HS_5_vGhIKSX6g5-OV36FRw1wOabUoX6bjJ9l9srFB0" /> />
+  <meta name="google-site-verification" content="HS_5_vGhIKSX6g5-OV36FRw1wOabUoX6bjJ9l9srFB0" />
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
